--- a/DataStructure/DataStructure.vcxproj.filters
+++ b/DataStructure/DataStructure.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="项目实验\栈">
       <UniqueIdentifier>{5214f0b8-87d6-41cf-b67f-3f9b48d59fb9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="项目实验\队列">
+      <UniqueIdentifier>{d3609c9b-b6ea-46c2-babc-dfcb9ac23a85}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -54,12 +57,18 @@
     <ClInclude Include="SqStack.h">
       <Filter>项目实验\栈</Filter>
     </ClInclude>
+    <ClInclude Include="LinkedQueue.h">
+      <Filter>项目实验\队列</Filter>
+    </ClInclude>
+    <ClInclude Include="CirQueue.h">
+      <Filter>项目实验\队列</Filter>
+    </ClInclude>
+    <ClInclude Include="Maze.h">
+      <Filter>项目实验\结点</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="DataStructure.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DuLinkedList.cpp">
@@ -76,6 +85,18 @@
     </ClCompile>
     <ClCompile Include="SqStack.cpp">
       <Filter>项目实验\栈</Filter>
+    </ClCompile>
+    <ClCompile Include="DataStructure.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedQueue.cpp">
+      <Filter>项目实验\队列</Filter>
+    </ClCompile>
+    <ClCompile Include="CirQueue.cpp">
+      <Filter>项目实验\队列</Filter>
+    </ClCompile>
+    <ClCompile Include="Maze.cpp">
+      <Filter>项目实验\结点</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
