--- a/DataStructure/DataStructure.vcxproj
+++ b/DataStructure/DataStructure.vcxproj
@@ -153,7 +153,9 @@
   <ItemGroup>
     <ClInclude Include="CirQueue.h" />
     <ClInclude Include="DuLinkedList.h" />
+    <ClInclude Include="Hanoi.h" />
     <ClInclude Include="header.h" />
+    <ClInclude Include="KMP.h" />
     <ClInclude Include="LinkedQueue.h" />
     <ClInclude Include="Maze.h" />
     <ClInclude Include="Node.h" />
@@ -166,6 +168,8 @@
     <ClCompile Include="CirQueue.cpp" />
     <ClCompile Include="DataStructure.cpp" />
     <ClCompile Include="DuLinkedList.cpp" />
+    <ClCompile Include="Hanoi.cpp" />
+    <ClCompile Include="KMP.cpp" />
     <ClCompile Include="LinkedQueue.cpp" />
     <ClCompile Include="Maze.cpp" />
     <ClCompile Include="Node.cpp" />
