--- a/DataStructure/DataStructure.vcxproj
+++ b/DataStructure/DataStructure.vcxproj
@@ -155,21 +155,21 @@
     <ClInclude Include="DuLinkedList.h" />
     <ClInclude Include="Hanoi.h" />
     <ClInclude Include="header.h" />
-    <ClInclude Include="KMP.h" />
     <ClInclude Include="LinkedQueue.h" />
     <ClInclude Include="Maze.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PrimeCount.h" />
+    <ClInclude Include="SeqQueue.h" />
     <ClInclude Include="SinglyLinkedList.h" />
     <ClInclude Include="SqStack.h" />
+    <ClInclude Include="SqString.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CirQueue.cpp" />
     <ClCompile Include="DataStructure.cpp" />
     <ClCompile Include="DuLinkedList.cpp" />
     <ClCompile Include="Hanoi.cpp" />
-    <ClCompile Include="KMP.cpp" />
     <ClCompile Include="LinkedQueue.cpp" />
     <ClCompile Include="Maze.cpp" />
     <ClCompile Include="Node.cpp" />
@@ -180,8 +180,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PrimeCount.cpp" />
+    <ClCompile Include="SeqQueue.cpp" />
     <ClCompile Include="SinglyLinkedList.cpp" />
     <ClCompile Include="SqStack.cpp" />
+    <ClCompile Include="SqString.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
