--- a/DataStructure/DataStructure.vcxproj
+++ b/DataStructure/DataStructure.vcxproj
@@ -151,7 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="BTree.h" />
+    <ClInclude Include="BTNode.h" />
     <ClInclude Include="CirQueue.h" />
     <ClInclude Include="DuLinkedList.h" />
     <ClInclude Include="Hanoi.h" />
@@ -167,7 +167,7 @@
     <ClInclude Include="SqString.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BTree.cpp" />
+    <ClCompile Include="BTNode.cpp" />
     <ClCompile Include="CirQueue.cpp" />
     <ClCompile Include="DataStructure.cpp" />
     <ClCompile Include="DuLinkedList.cpp" />
